# website-stalker

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  readme.md  website-stalker.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: aur.yml  container.yml  coverage.yml  json-schema.yml  run.yml  rust.yml
sites/: website-stalker.yaml
src/: cli.rs  commit_message.rs  config.rs  example-config.yaml  filename.rs  final_message.rs  git.rs  github.rs  http.rs  logger.rs  logging.rs  main.rs  notification.rs  regex_replacer.rs  serde_helper.rs  settings.rs  site.rs  site_store.rs  summary.rs
src/editor/: css_flatten.rs  css_remove.rs  css_selector.rs  css_sort.rs  css_tag_replace.rs  debug_files.rs  html_markdown.rs  html_pretty.rs  html_sanitize.rs  html_text.rs  html_url.rs  json_prettify.rs  json_simple_select.rs  mod.rs  regex_replacer.rs  rss.rs
src/site/: general.rs  html.rs  mod.rs  url_filename.rs  utf8.rs
src/site/html/: css_selection.rs  css_selector.rs  prettify.rs
systemd/: README.md  install.sh  remove.sh  sysusers.conf
systemd/system/: install.sh  remove.sh  service  systemd.service  sysuser  tmpfile  tmpfiles.conf
systemd/user/: install.sh  remove.sh  service  systemd.service  systemd.timer
