[package]
name = "website-stalker"
description = "Track changes on websites via git"
version = "0.18.1"
license = "LGPL-2.1-or-later"
repository = "https://github.com/EdJoPaTo/website-stalker"
authors = ["EdJoPaTo <website-stalker-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
regex = "1"

[dependencies]
clap = { version = "3", features = ["cargo", "wrap_help"] }
anyhow = "1"
chrono = "0.4"
config = "0.11"
html2md = "0.2"
html5ever = "0.25"
itertools = "0.10"
kuchiki = "0.8"
lazy_static = "1"
mime2ext = "0.1"
mustache = "0.9"
pling = "0.2"
regex = "1"
scraper = "0.12"
serde_json = "1"
serde_yaml = "0.8"

[dependencies.git2]
version = "0.14"
default-features = false

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
    "socks", # Socks5 Proxy support
    "brotli", # response body decompression
    "deflate", # response body decompression
    "gzip", # response body decompression
]

[dependencies.rss]
version = "2"
features = ["validation"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.url]
version = "2"
features = ["serde"]

[dev-dependencies]
tempfile = "3"
