[package]
name = "website-stalker"
description = "Track changes on websites via git"
version = "0.19.0"
license = "LGPL-2.1-or-later"
repository = "https://github.com/EdJoPaTo/website-stalker"
authors = ["EdJoPaTo <website-stalker-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
regex = "1"

[dependencies]
clap = { version = "3", features = ["cargo", "wrap_help", "deprecated"] }
anyhow = "1"
chrono = "0.4"
config = "0.13"
html2md = "0.2"
html5ever = "0.25"
itertools = "0.10"
kuchiki = "0.8"
mime2ext = "0.1"
mustache = "0.9"
once_cell = "1"
pling = "0.2"
regex = "1"
scraper = "0.13"
serde_json = "1"
serde_yaml = "0.8"

[dependencies.git2]
version = "0.14"
default-features = false

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
    "socks", # Socks5 Proxy support
    "brotli", # response body decompression
    "deflate", # response body decompression
    "gzip", # response body decompression
]

[dependencies.rss]
version = "2"
features = ["validation"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.url]
version = "2"
features = ["serde"]

[dev-dependencies]
tempfile = "3"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
recommends = "git"
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
    ["target/release/website-stalker", "/usr/bin/website-stalker", "755"],
    ["LICENSE", "/usr/share/licenses/website-stalker/LICENSE", "644"],
    ["README.md", "/usr/share/doc/website-stalker/README.md", "644"],

    ["systemd/user/service", "/lib/systemd/user/website-stalker.service", "644"],
    ["systemd/user/timer", "/lib/systemd/user/website-stalker.timer", "644"],

    ["target/completions/website-stalker.bash", "/usr/share/bash-completion/completions/website-stalker", "644"],
    ["target/completions/website-stalker.fish", "/usr/share/fish/completions/website-stalker.fish", "644"],
    ["target/completions/_website-stalker", "/usr/share/zsh/site-functions/_website-stalker", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/website-stalker", dest = "/usr/bin/website-stalker", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/website-stalker/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/website-stalker/README.md", mode = "644", doc = true },

    { source = "systemd/system/service", dest = "/usr/lib/systemd/system/website-stalker.service", mode = "644" },
    { source = "systemd/system/timer", dest = "/usr/lib/systemd/system/website-stalker.timer", mode = "644" },
    { source = "systemd/system/sysuser", dest = "/usr/lib/sysusers.d/website-stalker.conf", mode = "644" },
    { source = "systemd/system/tmpfile", dest = "/usr/lib/tmpfiles.d/website-stalker.conf", mode = "644" },

    { source = "systemd/user/service", dest = "/usr/lib/systemd/user/website-stalker.service", mode = "644" },
    { source = "systemd/user/timer", dest = "/usr/lib/systemd/user/website-stalker.timer", mode = "644" },

    { source = "target/completions/website-stalker.bash", dest = "/usr/share/bash-completion/completions/website-stalker", mode = "644" },
    { source = "target/completions/website-stalker.fish", dest = "/usr/share/fish/vendor_completions.d/website-stalker.fish", mode = "644" },
    { source = "target/completions/_website-stalker", dest = "/usr/share/zsh/site-functions/_website-stalker", mode = "644" },
]

[package.metadata.generate-rpm.requires]
git = "*"
