[package]
name = "website-stalker"
description = "Track changes on websites via git"
version = "0.22.0"
license = "LGPL-2.1-or-later"
repository = "https://github.com/EdJoPaTo/website-stalker"
authors = ["EdJoPaTo <website-stalker-rust@edjopato.de>"]
edition = "2021"

[lints.rust]
deprecated = "allow"
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
pling = { path = "../pling", default-features = false, features = ["clap", "reqwest"] }
regex = "1"

[dependencies]
ammonia = "3"
anyhow = "1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
html2md = "0.2"
html5ever = "0.26"
lazy-regex = "3"
mime2ext = "0.1"
mustache = "0.9"
once_cell = "1"
pling = { path = "../pling", default-features = false, features = ["clap", "reqwest"] }
regex = "1"
rss = { version = "2", features = ["validation"] }
scraper = { version = "0.19", features = ["deterministic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
	"rustls-tls",
	"socks", # Socks5 Proxy support
	"brotli", # response body decompression
	"deflate", # response body decompression
	"gzip", # response body decompression
]

[dev-dependencies]
tempfile = "3"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
recommends = "git"
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
	["target/release/website-stalker", "/usr/bin/", "755"],
	["CHANGELOG.md", "/usr/share/doc/website-stalker/", "644"],
	["LICENSE", "/usr/share/licenses/website-stalker/", "644"],
	["README.md", "/usr/share/doc/website-stalker/", "644"],

	["systemd/user/service", "/lib/systemd/user/website-stalker.service", "644"],
	["systemd/user/timer", "/lib/systemd/user/website-stalker.timer", "644"],

	["target/completions/website-stalker.bash", "/usr/share/bash-completion/completions/website-stalker", "644"],
	["target/completions/website-stalker.fish", "/usr/share/fish/completions/", "644"],
	["target/completions/_website-stalker", "/usr/share/zsh/site-functions/", "644"],

	["target/manpages/*", "/usr/share/man/man1/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/website-stalker", dest = "/usr/bin/", mode = "755" },
	{ source = "CHANGELOG.md", dest = "/usr/share/doc/website-stalker/", mode = "644", doc = true },
	{ source = "LICENSE", dest = "/usr/share/licenses/website-stalker/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/website-stalker/", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/website-stalker.service", mode = "644" },
	{ source = "systemd/system/timer", dest = "/usr/lib/systemd/system/website-stalker.timer", mode = "644" },
	{ source = "systemd/system/sysuser", dest = "/usr/lib/sysusers.d/website-stalker.conf", mode = "644" },
	{ source = "systemd/system/tmpfile", dest = "/usr/lib/tmpfiles.d/website-stalker.conf", mode = "644" },

	{ source = "systemd/user/service", dest = "/usr/lib/systemd/user/website-stalker.service", mode = "644" },
	{ source = "systemd/user/timer", dest = "/usr/lib/systemd/user/website-stalker.timer", mode = "644" },

	{ source = "target/completions/website-stalker.bash", dest = "/usr/share/bash-completion/completions/website-stalker", mode = "644" },
	{ source = "target/completions/website-stalker.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644" },
	{ source = "target/completions/_website-stalker", dest = "/usr/share/zsh/site-functions/", mode = "644" },

	{ source = "target/manpages/*", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
git = "*"
